force-app/main/default/objects/Email_Request__c/Email_Request__c.object-meta.xml
<CustomObject>
    <label>Email Request</label>
    <nameField>
        <displayFormat>ERN-{000000}</displayFormat>
        <label>ERN</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>