force-app/main/default/objects/Email_Request__c/fields/Email_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Email_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Email_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>