force-app/main/default/objects/Email_Request__c/fields/Email_Body__c.field-meta.xml
<CustomField>
    <fullName>Email_Body__c</fullName>
    <description>body of the received email</description>
    <label>Email Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>