force-app/main/default/objects/Email_Request__c/fields/From_Address__c.field-meta.xml
<CustomField>
    <fullName>From_Address__c</fullName>
    <description>Email from Address</description>
    <label>From Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>