force-app/main/default/objects/Email_Request__c/fields/subject__c.field-meta.xml
<CustomField>
    <fullName>subject__c</fullName>
    <description>Email Subject</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>