force-app/main/default/objects/Email_Request__c/fields/To_Address__c.field-meta.xml
<CustomField>
    <fullName>To_Address__c</fullName>
    <description>To Address from email received</description>
    <label>To Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>