force-app/main/default/objects/Email_Request__c/listViews/Email_Request_General_View.listView-meta.xml
<ListView>
    <fullName>Email_Request_General_View</fullName>
    <columns>NAME</columns>
    <columns>subject__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>From_Address__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Email_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Email Request General View</label>
</ListView>